Fix actions buttons not aligned + Remove template limitations Actions buttons were not aligned in the upload tab. Remove template restrictions:  - Each action was forced to be inside a <div>   - Order was important   => now css based

--- a/html_src/css/skin/default.css
+++ b/html_src/css/skin/default.css
@@ -511,9 +511,6 @@ overflow: auto;
 table.jukebox-upload-table .jukebox-uploaded-file-actions{
 white-space: nowrap;
 }
-.jukebox-uploaded-file-actions div{
-float: left;
-}
 table.jukebox-upload-table td form{
 overflow: auto;
 }
